--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -96,7 +96,7 @@
 
   <div class="form-check-reverse form-switch">
   <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
-  <label class="form-check-label" for="switchCheckDefault">Total taxes to pay</label>
+  <label class="form-check-label" for="switchCheckDefault">Includes service fee+GST</label>
 </div>
 
 </div>
