--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,116 +1,110 @@
-
-<%layout("/layouts/boilerplate")%>
+<% layout("/layouts/boilerplate") %>
 
 <div class="row">
-<div class="col-8 offset-4">
-<body>
-    <h3><%=listing.title%></h3>
-</div>
-    <div class="card col-5 offset-4 listing-card">
-    <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
+  <div class="col-8 offset-4">
+    <h3><%= listing.title %></h3>
+  </div>
+
+  <div class="card col-5 offset-4 listing-card">
+    <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
     <div class="card-body">
-    <p class="card-text">Owned by <i><%=listing.owner.username%></i></p>
-    <p class="card-text"> <%=listing.description%> </p>
+      <p class="card-text">
+        Owned by <i><%= listing.owner.username %></i>
+      </p>
 
-    <p class="card-text">&#8377;<%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %> </p>
-    <p class="card-text"> <%=listing.location%> </p>
-    <p class="card-text"> <%=listing.country%> </p>
+      <p class="card-text"><%= listing.description %></p>
 
-     </div>
+      <p class="card-text">
+        &#8377;<%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %>
+      </p>
+
+      <p class="card-text"><%= listing.location %></p>
+      <p class="card-text"><%= listing.country %></p>
     </div>
+  </div>
 
+  <!--  BOOK / RESERVE BUTTON (ADDED) -->
+  <% if (currUser && !listing.owner._id.equals(currUser._id)) { %>
+    <div class="offset-4 mt-3">
+      <form action="/payment/checkout/<%= listing._id %>" method="GET">
+        <button class="btn btn-success btn-lg">
+          Reserve
+        </button>
+      </form>
+    </div>
+  <% } %>
 
-<% if(currUser && listing.owner._id.equals(currUser._id)){ %>
+  <!-- OWNER EDIT / DELETE -->
+  <% if (currUser && listing.owner._id.equals(currUser._id)) { %>
+    <div class="btns mt-3">
+      <div class="offset-4">
+        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit2-btn">
+          Edit
+        </a>
+      </div>
 
-<div class="btns">
-<div class="offset-4">
-<a href="/listings/<%=listing._id%>/edit" class="btn btn-dark edit2-btn" >Edit</a> 
-</div>
-<br>
-<form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
+      <br>
 
-    <div class=" offset-4">
-    <button class="btn btn-dark delete-btn">Delete</button>
-    </div>  
-    <br>
-</form>
-</div>
+      <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+        <div class="offset-4">
+          <button class="btn btn-dark delete-btn">Delete</button>
+        </div>
+      </form>
+    </div>
+  <% } %>
 
-<%}%>
+  <!-- REVIEWS -->
+  <div class="card col-5 offset-4 mb-3 mt-4">
 
-</body>
+    <% if (currUser) { %>
+      <h4>Leave a Review</h4>
 
-
-<div class="card col-5 offset-4 mb-3">
-
-      
-<%if(currUser){%>
-
-    <h4>Leave a Review</h4>
-    <form action="/listings/<%=listing.id%>/reviews" method="POST" novalidate class="needs-validation"> 
-
-
-
- <div class="mb-3 mt-3">
-
-<label for="rating" class="form-label">Rating</label>
-
-<fieldset class="starability-slot">
-
-
-  <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-
-  <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-  <label for="first-rate1" title="Terrible">1 star</label>
-  <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-  <label for="first-rate2" title="Not good">2 stars</label>
-  <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-  <label for="first-rate3" title="Average">3 stars</label>
-  <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-  <label for="first-rate4" title="Very good">4 stars</label>
-  <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-  <label for="first-rate5" title="Amazing">5 stars</label>
-</fieldset>
-
-</div>
+      <form action="/listings/<%= listing.id %>/reviews" method="POST"
+            novalidate class="needs-validation">
 
         <div class="mb-3 mt-3">
-            <label for="comments" class="form-label">Comments</label>
-            <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
-            <div class="invalid-feedback">please Add comments for review</div>
+          <label class="form-label">Rating</label>
+
+          <fieldset class="starability-slot">
+            <input type="radio" name="review[rating]" value="1" checked />
+            <input type="radio" name="review[rating]" value="2" />
+            <input type="radio" name="review[rating]" value="3" />
+            <input type="radio" name="review[rating]" value="4" />
+            <input type="radio" name="review[rating]" value="5" />
+          </fieldset>
         </div>
-        <br>
+
+        <div class="mb-3">
+          <label class="form-label">Comments</label>
+          <textarea name="review[comment]" rows="4"
+                    class="form-control" required></textarea>
+        </div>
+
         <button class="btn btn-outline-dark">Submit</button>
+      </form>
 
-    </form>
-    <hr>
-     <%}%>
-    <br>
-   <p><b>All Reviews</b></p>
-      
-      <div class="row ">
-    <%for(review of listing.reviews){ %>
-          <div class="card col-5 ms-4 mb-3">
-            <div class="card-body">
-             <h5 class="card-title">@<%=review.author.username%></h5>
+      <hr>
+    <% } %>
 
-            <p class="starability-result card-text" data-rating="<%=review.rating%>"></p>
+    <p><b>All Reviews</b></p>
 
-             <p class="card-text"><%=review.comment%></p>   
-            </div>
-
-             <form class="mb-3" method="POST" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
-                <button class="btn btn-sm btn-dark">Delete</button>
-             </form>
-
+    <div class="row">
+      <% for (review of listing.reviews) { %>
+        <div class="card col-5 ms-4 mb-3">
+          <div class="card-body">
+            <h5>@<%= review.author.username %></h5>
+            <p class="starability-result"
+               data-rating="<%= review.rating %>"></p>
+            <p><%= review.comment %></p>
           </div>
-          
 
-        <%}%>
-
-
+          <form method="POST"
+                action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+            <button class="btn btn-sm btn-dark">Delete</button>
+          </form>
         </div>
-</div>
+      <% } %>
+    </div>
 
-
+  </div>
 </div>
