Update footer social links

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,4 +1,16 @@
 <style>
+.navbar-brand i {
+  color: #fe424d;
+  font-size: 3rem;
+  
+}
+.navbar-brand i:hover {
+  color: #e63946; 
+}
+
+
+
+
 .search-btn{
   background-color: #fe424d;
   color:#fff;
@@ -27,7 +39,7 @@
   <div class="container-fluid">
 
     <a class="navbar-brand" href="/listings">
-      <i class="fa-regular fa-compass"></i>
+      <i class="fa-brands fa-airbnb"></i></i>
     </a>
 
     <button class="navbar-toggler" type="button" 
