--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,21 +1,27 @@
 <footer>
-    <div class="f-info">
+  <div class="f-info">
 
-        <div class="f-info-socials">
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            
-
-        </div>
-
-           <div class="f-info-brand">&copy;ComfortHome private limited</div>
-
-        <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            <a href="/terms">Terms</a>
-
-        </div>
+    <!-- Social Icons -->
+    <div class="f-info-socials">
+      <i class="fa-brands fa-square-facebook"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <a href="https://www.linkedin.com/in/ashish-roy-1891441b1/" target="_blank">
+      <i class="fa-brands fa-linkedin"></i>
+      </a>
 
     </div>
+
+    <!-- Brand Text -->
+    <div class="f-info-brand">
+      &copy; 2026 ComfortHome Pvt. Ltd. All rights reserved.
+    </div>
+
+    <!-- Links -->
+    <div class="f-info-links">
+      <a href="/privacy">Privacy Policy</a>
+      <span> | </span>
+      <a href="/terms">Terms of Service</a>
+    </div>
+
+  </div>
 </footer>
