--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -2,50 +2,59 @@
 <html lang="en">
 <head>
 
+  <!-- Website Title -->
   <title>ComfortHome</title>
 
+  <!-- Main CSS File -->
   <link rel="stylesheet" href="/css/style.css"/>
 
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
         rel="stylesheet"
         crossorigin="anonymous">
 
+  <!-- Font Awesome Icons -->
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer" />
 
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;400;600;800&display=swap"
         rel="stylesheet">
 
+  <!-- Rating Stars CSS -->
   <link rel="stylesheet" href="/css/rating.css"/>
 
 </head>
 
 <body>
 
-  <!-- Navbar -->
+  <!-- ================= NAVBAR ================= -->
   <%- include("../includes/navbar.ejs") %>
 
-  <!-- Page Content -->
+  <!-- ================= PAGE CONTENT ================= -->
   <div class="container mt-3">
 
     <!-- Flash Messages -->
     <%- include("../includes/flash.ejs") %>
 
-    <!-- Page Body -->
+    <!-- Dynamic Page Body -->
     <%- body %>
 
   </div>
 
-  <!-- Footer -->
+  <!-- ================= FOOTER ================= -->
   <%- include("../includes/footer.ejs") %>
 
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
           crossorigin="anonymous"></script>
 
+  <!-- Custom JavaScript -->
   <script src="/js/script.js"></script>
 
 </body>
